--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     </ul>
 
                     <div class="legal">
-                        &copy; 2020 by Trillo. All Rights Reserved.
+                        Copyright &copy; 2023 by Trillo. All Rights Reserved.
                     </div>
                 </nav>
 
